--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marco Salvatore">
     <meta name="description" content="Layout">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Layout</title>
 </head>
 <body>
-    
+    <section class="container">
+        <header class="px-4 row m-0">
+            <div class="col m-0 row align-items-center border border-primary">
+                <h3>Header Title</h3>
+            </div>
+            <div class="col border border-danger">
+            </div>
+        </header>
+        <div class="sub-header">
+            <div class="content-header border">
+
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
