--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <title>Layout</title>
 </head>
 <body>
+
     <section class="container">
+
         <header class="px-4 row m-0">
             <div class="col m-0 row align-items-center border border-primary">
                 <h3>Header Title</h3>
@@ -20,11 +22,13 @@
             <div class="col border border-danger">
             </div>
         </header>
-        <div class="sub-header">
-            <div class="content-header border">
-
-            </div>
+        <div class="sub-header row m-0 justify-content-center">
+            <div class="col-9 content-header w-50 my-5 border"></div>
         </div>
+
+        <main>
+            <h3 class="text-center py-5">Title Main</h3>
+        </main>
     </section>
 
 </body>
