--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 
         <main>
             <h3 class="text-center py-5">Title Main</h3>
+            <div class="img-main row justify-content-center m-0">
+                <div class="col-11 my-3 border border-dark border-5"></div>
+                <div class="col-11 my-3 border border-dark border-5"></div>
+                <div class="col-11 my-3 border border-dark border-5"></div>
+                <div class="col-11 my-3 border border-dark border-5"></div>
+                <div class="col-11 my-3 border border-dark border-5"></div>
+                <div class="col-11 my-3 border border-dark border-5"></div>
+            </div>
         </main>
     </section>
 
