--- a/index.html
+++ b/index.html
@@ -23,19 +23,25 @@
             </div>
         </header>
         <div class="sub-header row m-0 justify-content-center">
-            <div class="col-9 content-header w-50 my-5 border"></div>
+            <div class="col-9 my-5 border"></div>
         </div>
 
         <main>
-            <h3 class="text-center py-5">Title Main</h3>
-            <div class="img-main row justify-content-center m-0">
-                <div class="col-11 my-3 border border-dark border-5"></div>
-                <div class="col-11 my-3 border border-dark border-5"></div>
-                <div class="col-11 my-3 border border-dark border-5"></div>
-                <div class="col-11 my-3 border border-dark border-5"></div>
-                <div class="col-11 my-3 border border-dark border-5"></div>
-                <div class="col-11 my-3 border border-dark border-5"></div>
-            </div>
+            <section>
+                <h3 class="text-center py-5">Title Main</h3>
+                <div class="img-main row justify-content-center m-0">
+                    <div class="col-11 my-3 border border-dark border-3"></div>
+                    <div class="col-11 my-3 border border-dark border-3"></div>
+                    <div class="col-11 my-3 border border-dark border-3"></div>
+                    <div class="col-11 my-3 border border-dark border-3"></div>
+                    <div class="col-11 my-3 border border-dark border-3"></div>
+                    <div class="col-11 my-3 border border-dark border-3"></div>
+                </div>
+            </section>
+            <section class="main-info my-5 row m-0 justify-content-center">
+                <div class="col-7 my-5 border border border-3"></div>
+                <div class="col-7 my-5 border border border-3"></div>
+            </section>
         </main>
     </section>
 
