--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 <div class="col-7 my-5 border border border-3"></div>
             </section>
         </main>
+
+        <footer>
+            <section>
+                <div cla></div>
+            </section>
+        </footer>
     </section>
 
 </body>
