end mobile layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 
         <footer>
             <section>
-                <div cla></div>
+                <div class="foot row justify-content-center align-items-center m-0">
+                    <div class="social col-8 border border-primary"></div>
+                    <div class="copyright col-8 border border-dark"></div>
+                </div>
             </section>
         </footer>
     </section>
