--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-    <section class="container">
+    <section class="container .container-md">
 
-        <header class="px-4 row m-0">
+        <header class="px-4 px-md-5 row m-0">
             <div class="col m-0 row align-items-center border border-primary">
                 <h3>Header Title</h3>
             </div>
@@ -23,24 +23,35 @@
             </div>
         </header>
         <div class="sub-header row m-0 justify-content-center">
-            <div class="col-9 my-5 border"></div>
+            <div class="col-9 col-md-6 my-5 border"></div>
         </div>
 
         <main>
             <section>
                 <h3 class="text-center py-5">Title Main</h3>
                 <div class="img-main row justify-content-center m-0">
-                    <div class="col-11 my-3 border border-dark border-3"></div>
-                    <div class="col-11 my-3 border border-dark border-3"></div>
-                    <div class="col-11 my-3 border border-dark border-3"></div>
-                    <div class="col-11 my-3 border border-dark border-3"></div>
-                    <div class="col-11 my-3 border border-dark border-3"></div>
-                    <div class="col-11 my-3 border border-dark border-3"></div>
+                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
+                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
+                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
+                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
+                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
+                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
                 </div>
             </section>
-            <section class="main-info my-5 row m-0 justify-content-center">
-                <div class="col-7 my-5 border border border-3"></div>
-                <div class="col-7 my-5 border border border-3"></div>
+            <section class="main-info m-0">
+                <h3 class="text-center">About</h3>
+                <div class="row justify-content-center">
+                    <div class="row col-8 justify-content-between">
+                        <div class="main-info-h col-12 my-3 col-md-5 border border border-3"></div>
+                        <div class="main-info-h col-12 my-3 col-md-5 border border border-3"></div>
+                    </div>
+                </div>
+            </section>
+            <section class="contact m-0">
+                <h3 class="text-center">Contact</h3>
+                <div class="row justify-content-center">
+                    <div class="contact-h col-8 m-5 border border border-3"></div>
+                </div>
             </section>
         </main>
 
