--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-    <section class="container .container-md">
+    <section class="container .container-md .container-lg">
 
-        <header class="px-4 px-md-5 row m-0">
+        <header class="px-3 px-md-4 px-lg-5 row m-0">
             <div class="col m-0 row align-items-center border border-primary">
                 <h3>Header Title</h3>
             </div>
@@ -23,27 +23,27 @@
             </div>
         </header>
         <div class="sub-header row m-0 justify-content-center">
-            <div class="col-9 col-md-6 my-5 border"></div>
+            <div class="col-11 col-md-9 col-lg-7 my-5 border"></div>
         </div>
 
         <main>
             <section>
                 <h3 class="text-center py-5">Title Main</h3>
                 <div class="img-main row justify-content-center m-0">
-                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
-                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
-                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
-                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
-                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
-                    <div class="img-h col-11 col-md-5 m-3 border border-dark border-3"></div>
+                    <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
+                    <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
+                    <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
+                    <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
+                    <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
+                    <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
                 </div>
             </section>
             <section class="main-info m-0">
                 <h3 class="text-center">About</h3>
                 <div class="row justify-content-center">
-                    <div class="row col-8 justify-content-between">
-                        <div class="main-info-h col-12 my-3 col-md-5 border border border-3"></div>
-                        <div class="main-info-h col-12 my-3 col-md-5 border border border-3"></div>
+                    <div class="row col-9 justify-content-between m-0">
+                        <div class="main-info-h col-12 my-3 col-md-6 border border border-3"></div>
+                        <div class="main-info-h col-12 my-3 col-md-6 border border border-3"></div>
                     </div>
                 </div>
             </section>
@@ -57,9 +57,15 @@
 
         <footer>
             <section>
-                <div class="foot row justify-content-center align-items-center m-0">
-                    <div class="social col-8 border border-primary"></div>
-                    <div class="copyright col-8 border border-dark"></div>
+                <div class="row justify-content-center align-items-center m-0">
+                    <div class="social col-12 border border-primary row justify-content-center">
+                        <div class="social-h col-12 my-4 col-md-4 border border-dark border-3"></div>
+                        <div class="social-h col-12 my-4 col-md-4 border border-dark border-3"></div>
+                        <div class="social-h col-12 my-4 col-md-4 border border-dark border-3"></div>
+                    </div>
+                </div>
+                <div class="row justify-content-center align-items-center m-0">
+                    <div class="copyright col-12 border border-dark"></div>
                 </div>
             </section>
         </footer>
