--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
 </head>
 <body>
 
-    <section class="container .container-md .container-lg">
-
-        <header class="px-3 px-md-4 px-lg-5 row m-0">
-            <div class="col m-0 row align-items-center border border-primary">
+    
+    <header>
+        <section class="container top-header row justify-content-center">
+            <div class="col border border-primary">
                 <h3>Header Title</h3>
             </div>
             <div class="col border border-danger">
             </div>
-        </header>
-        <div class="sub-header row m-0 justify-content-center">
-            <div class="col-11 col-md-9 col-lg-7 my-5 border"></div>
+        </section>
+        <div class="bottom-header row justify-content-center">
+            <div class="col-11 col-col-lg-7 border"></div>
         </div>
+    </header>
 
         <main>
             <section>
-                <h3 class="text-center py-5">Title Main</h3>
-                <div class="img-main row justify-content-center m-0">
+                <h3 class="text-center">Title Main</h3>
+                <div class="img-main row justify-content-center">
                     <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
                     <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
                     <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
@@ -38,16 +39,16 @@
                     <div class="img-h col-10 col-md-5 col-lg-3 my-1 mx-md-0 mx-md-2 mx-lg-3 border border-dark border-3"></div>
                 </div>
             </section>
-            <section class="main-info m-0">
+            <section class="main-info">
                 <h3 class="text-center">About</h3>
                 <div class="row justify-content-center">
-                    <div class="row col-9 justify-content-between m-0">
+                    <div class="row col-9 justify-content-between">
                         <div class="main-info-h col-12 my-3 col-md-6 border border border-3"></div>
                         <div class="main-info-h col-12 my-3 col-md-6 border border border-3"></div>
                     </div>
                 </div>
             </section>
-            <section class="contact m-0">
+            <section class="contact">
                 <h3 class="text-center">Contact</h3>
                 <div class="row justify-content-center">
                     <div class="contact-h col-8 m-5 border border border-3"></div>
@@ -57,19 +58,18 @@
 
         <footer>
             <section>
-                <div class="row justify-content-center align-items-center m-0">
+                <div class="row justify-content-center align-items-center">
                     <div class="social col-12 border border-primary row justify-content-center">
                         <div class="social-h col-12 my-4 col-md-4 border border-dark border-3"></div>
                         <div class="social-h col-12 my-4 col-md-4 border border-dark border-3"></div>
                         <div class="social-h col-12 my-4 col-md-4 border border-dark border-3"></div>
                     </div>
                 </div>
-                <div class="row justify-content-center align-items-center m-0">
+                <div class="row justify-content-center align-items-center">
                     <div class="copyright col-12 border border-dark"></div>
                 </div>
             </section>
         </footer>
-    </section>
 
 </body>
 
