--- a/index.html
+++ b/index.html
@@ -15,12 +15,28 @@
 
     
     <header>
-        <section class="container top-header row justify-content-center">
-            <div class="col border border-primary">
-                <h3>Header Title</h3>
-            </div>
-            <div class="col border border-danger">
-            </div>
+        <section class="top-header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-grey">
+                <div class="container">
+                  <a class="navbar-brand h3 text-white" href="#">START BOOTSTRAP</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="#">PORTFOLIO</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="#">ABOUT</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white">CONTACT</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </section>
         <div class="bottom-header row justify-content-center">
             <div class="col-11 col-col-lg-7 border"></div>
