--- a/index.html
+++ b/index.html
@@ -67,12 +67,25 @@
                     <img class="col-12 col-md-6 col-lg-4 my-3 px-5 px-md-3 rounded-5" src="img/submarine.png" alt="submarine">
                 </div>
             </section>
-            <section class="main-info">
-                <h3 class="text-center">About</h3>
-                <div class="row justify-content-center">
-                    <div class="row col-9 justify-content-between">
-                        <div class="main-info-h col-12 my-3 col-md-6 border border border-3"></div>
-                        <div class="main-info-h col-12 my-3 col-md-6 border border border-3"></div>
+            <!-- Main-Info -->
+            <section class="main-info my-5">
+                <div class="py-5 container">
+                    <div class="text-center text-white fs-4">
+                        <h3>About</h3>
+                        <i class="fas fa-star my-3"></i>
+                    </div>
+                    <div class="row justify-content-center text-white fw-bold fs-5">
+                        <div class="row col-9 justify-content-between">
+                            <div class="col-12 my-3 col-md-6">
+                                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                            </div>
+                            <div class="col-12 my-3 col-md-6">
+                                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                            </div>
+                            <div class="col-12 my-3 text-center">
+                                <span class="download border border-white px-3 py-2"><i class="fas fa-download"></i>  Download</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
