--- a/index.html
+++ b/index.html
@@ -116,19 +116,38 @@
                 </div>
             </section>
         </main>
-
+        <!-- Footer -->
         <footer>
-            <section class="container">
-                <div class="row justify-content-center align-items-center">
-                    <div class="social col-12 row justify-content-center">
-                        <div class="col-12 my-4 col-md-4"></div>
-                        <div class="col-12 my-4 col-md-4"></div>
-                        <div class="col-12 my-4 col-md-4"></div>
+            <section class="social">
+                <div class="container-fluid">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="social col-12 col-lg-9 row justify-content-center">
+                            <div class="col-12 my-4 col-md-4 text-white text-center fs-5 fw-bolder">
+                                <span>LOCATION</span><br>
+                                <span>2215 John Daniel Drive Clark, MO 54243</span>
+                            </div>
+                            <div class="section-icon col-12 my-4 col-md-4 text-white text-center fs-5 fw-bolder">
+                                <span>AROUND THE WEB</span><br>
+                                <div class="pt-2">
+                                    <i class="fab fa-facebook-f border mx-1 rounded-circle"></i>
+                                    <i class="fab fa-google-plus-g border mx-1 rounded-circle"></i>
+                                    <i class="fab fa-twitter border mx-1 rounded-circle"></i>
+                                    <i class="fab fa-linkedin-in border mx-1 rounded-circle"></i>
+                                </div>
+                            </div>
+                            <div class="col-12 my-4 col-md-4 text-white text-center fs-5 fw-bolder">
+                                <span>ABOUT FREELANCER</span><br>
+                                <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green">Start Bootsrap</span>.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="copyright col-12 border border-dark"></div>
-                </div>
+                    <!-- Copyright -->
+                    <div class="copyright">
+                        <div class="text-white text-center align-middle">
+                            <span>Copyright <i class="far fa-copyright"></i> Your Website 2019</span>
+                        </div>
+                    </div>
             </section>
         </footer>
 
