--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Jumbotron -->
         <div id="jumbotron">
             <div class="card border-0 bg-aqua">
-                <img src="img/avatar.svg" class="card-img-top" alt="avatar">
+                <img src="img/avatar.svg" class="card-img-top align-self-center" alt="avatar">
                 <div class="card-body text-center text-white">
                   <h1>START BOOTSTRAP</h1>
                   <i class="fas fa-star my-3"></i><br>
@@ -119,9 +119,9 @@
         <!-- Footer -->
         <footer>
             <section class="social">
-                <div class="container-fluid">
-                    <div class="row justify-content-center align-items-center">
-                        <div class="social col-12 col-lg-9 row justify-content-center">
+                <div class="container-fluid py-3">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-lg-9 row justify-content-center">
                             <div class="col-12 my-4 col-md-4 text-white text-center fs-5 fw-bolder">
                                 <span>LOCATION</span><br>
                                 <span>2215 John Daniel Drive Clark, MO 54243</span>
@@ -144,7 +144,7 @@
                 </div>
                     <!-- Copyright -->
                     <div class="copyright">
-                        <div class="text-white text-center align-middle">
+                        <div class="text-white text-center">
                             <span>Copyright <i class="far fa-copyright"></i> Your Website 2019</span>
                         </div>
                     </div>
