--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                     <!-- Copyright -->
                     <div class="copyright">
-                        <div class="text-white text-center">
+                        <div class="text-white text-center py-1">
                             <span>Copyright <i class="far fa-copyright"></i> Your Website 2019</span>
                         </div>
                     </div>
