--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-grey">
                 <div class="container">
                   <a class="navbar-brand h3 text-white" href="#">START BOOTSTRAP</a>
-                  <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
@@ -41,11 +41,15 @@
         </section>
         <!-- Jumbotron -->
         <div id="jumbotron">
-            <div class="card border-0 bg-aqua">
+            <div class="card border-0 bg-aqua py-3">
                 <img src="img/avatar.svg" class="card-img-top align-self-center" alt="avatar">
                 <div class="card-body text-center text-white">
-                  <h1>START BOOTSTRAP</h1>
-                  <i class="fas fa-star my-3"></i><br>
+                    <h1>START BOOTSTRAP</h1>
+                    <div class="star my-3">
+                        <div class="star-bar d-inline-block rounded-pill bg-white"></div>
+                        <i class="fas fa-star"></i>
+                        <div class="star-bar d-inline-block rounded-pill bg-white"></div>
+                    </div>
                   <span>GRAPHIC DESIGNER - WEB DESIGNER - ILLUSTRATOR</span>
                 </div>
             </div>
@@ -56,7 +60,11 @@
             <section class="container">
                 <div class="text-center mt-5">
                     <h3 class="">PORTFOLIO</h3>
-                    <i class="fas fa-star my-2 mb-3"></i><br>
+                    <div class="star my-3">
+                        <div class="star-bar d-inline-block rounded-pill bg-dark"></div>
+                        <i class="fas fa-star"></i>
+                        <div class="star-bar d-inline-block rounded-pill bg-dark"></div>
+                    </div>
                 </div>
                 <div class="img-main row justify-content-center">
                     <img class="col-12 col-md-6 col-lg-4 my-3 rounded-5" src="img/cabin.png" alt="house">
@@ -72,7 +80,11 @@
                 <div class="py-5 container">
                     <div class="row text-center text-white fs-4">
                         <h3>About</h3>
-                        <i class="fas fa-star my-3"></i>
+                        <div class="star my-3">
+                            <div class="star-bar d-inline-block rounded-pill bg-white"></div>
+                            <i class="fas fa-star"></i>
+                            <div class="star-bar d-inline-block rounded-pill bg-white"></div>
+                        </div>
                     </div>
                     <div class="row text-white fw-bold fs-5 justify-content-center">
                         <div class="row col-8 justify-content-between">
@@ -92,7 +104,11 @@
             <section class="contact container">
                 <div class="text-center">
                     <h3>CONTACT ME</h3>
-                    <i class="fas fa-star mt-3"></i>
+                    <div class="star my-3">
+                        <div class="star-bar d-inline-block rounded-pill bg-dark"></div>
+                        <i class="fas fa-star"></i>
+                        <div class="star-bar d-inline-block rounded-pill bg-dark"></div>
+                    </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-8 mb-5">
@@ -144,7 +160,7 @@
                 </div>
                     <!-- Copyright -->
                     <div class="copyright">
-                        <div class="text-white text-center py-1">
+                        <div class="text-white text-center py-5">
                             <span>Copyright <i class="far fa-copyright"></i> Your Website 2019</span>
                         </div>
                     </div>
